--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -24,12 +24,14 @@
             android:background="@drawable/border_blue"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:padding="5dp" >
+            android:padding="10dp" >
 
             <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                card_view:cardBackgroundColor="@color/blue_dark" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -67,18 +69,20 @@
                         android:padding="5dp"
                         android:singleLine="false"
                         android:text="@string/rent_smart_earn_smart"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="14sp"
                         custom:fonttype="trebuchet_ms" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp"
-                android:layout_weight="1" >
+                android:layout_weight="1"
+                card_view:cardBackgroundColor="@color/pinkdark" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -116,7 +120,7 @@
                         android:padding="5dp"
                         android:singleLine="false"
                         android:text="@string/why_buy_when_you_can_rent_"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="14sp"
                         custom:fonttype="trebuchet_ms" />
                 </LinearLayout>
